# appHUUFMA

./: README.md  pyproject.toml
huufma/: __init__.py  bp_solver.py  home.py  hu_instance_gen.py  hu_solver.py  hu_utility.py
huufma/static/: answer.css  index.css  solver.css  style.css
huufma/static/scripts/: answer.js  solver.js
huufma/templates/: base.html  base.html.jinja  index.html  index.html.jinja
huufma/templates/solver/: answer.html.jinja  solver.html.jinja
